Weight space visualization and weight anisotropy.

--- a/pami/synapticAnnealingBib.bib
+++ b/pami/synapticAnnealingBib.bib
@@ -640,3 +640,21 @@
 	keywords = {Annealing, Gibbs distribution, MAP estimate, Markov random field, image restoration, line process, relaxation, scene modeling, spatial degradation},
 } 
 
+
+
+
+
+@article{dallinga2004performancegsa,
+	title = {{Performance and parameterization of the algorithm Simplified Generalized Simulated Annealing}},
+	journal = {{Genetics and Molecular Biology}},
+	author={Dall'Igna J\~A\textordmasculinenior, Alcino AND Silva, Renato S. AND Mundim, Kleber C. AND Dardenne, Laurent E.},
+	ISSN = {1415-4757},
+	language = {en},
+	URL = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S1415-47572004000400024&nrm=iso},
+	volume = {27},
+	year = {2004},
+	month = {00},
+	pages = {616 - 622},
+	publisher = {scielo},
+	crossref = {10.1590/S1415-47572004000400024},
+}
