--- a/thesis/doc/AFIT LaTeX/synapticAnnealingBib.bib
+++ b/thesis/doc/AFIT LaTeX/synapticAnnealingBib.bib
@@ -640,3 +640,36 @@
 	keywords = {Annealing, Gibbs distribution, MAP estimate, Markov random field, image restoration, line process, relaxation, scene modeling, spatial degradation},
 } 
 
+
+
+
+@article{dallinga2004performancegsa,
+	title = {{Performance and parameterization of the algorithm Simplified Generalized Simulated Annealing}},
+	journal = {{Genetics and Molecular Biology}},
+	author={Dall'Igna J, Alcino AND Silva, Renato S. AND Mundim, Kleber C. AND Dardenne, Laurent E.},
+	ISSN = {1415-4757},
+	language = {en},
+	URL = {http://www.scielo.br/scielo.php?script=sci_arttext&pid=S1415-47572004000400024&nrm=iso},
+	volume = {27},
+	year = {2004},
+	month = {00},
+	pages = {616 - 622},
+	publisher = {scielo},
+	crossref = {10.1590/S1415-47572004000400024},
+}
+
+
+@article{andricioaei1996applicationgsatetrapide,
+	title = {Generalized simulated annealing algorithms using Tsallis statistics: Application to conformational optimization of a tetrapeptide},
+	author = {Andricioaei, Ioan and Straub, John E.},
+	journal = {Phys. Rev. E},
+	volume = {53},
+	issue = {4},
+	pages = {R3055--R3058},
+	numpages = {0},
+	year = {1996},
+	month = {Apr},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevE.53.R3055},
+	url = {http://link.aps.org/doi/10.1103/PhysRevE.53.R3055}
+}
